<resources>
    <string name="app_name">BluetoothHelper</string>
    <string name="fragment_main_ui_message_hit_ascii">ASCII</string>
    <string name="fragment_main_ui_message_hit_hex">HEX</string>
    <string name="fragment_main_ui_message_menu_title">Title</string>
    <string name="fragment_main_ui_message_menu_clean">Clean</string>
    <string name="fragment_main_ui_message_menu_copy">Copy</string>
    <string name="fragment_main_ui_message_menu__save">Save</string>
    <string name="fragment_main_ui_output_hint">Receiving area</string>
    <string name="fragment_main_ui_button_send">Send</string>
    <string name="fragment_main_ui_check_hex">@string/fragment_main_ui_message_hit_hex</string>
    <string name="fragment_main_log_header_app">AppName: %1$s\n</string>
    <string name="fragment_main_log_header_version">AppVersion: %1$s\n</string>
    <string name="fragment_main_log_header_device">DeviceName: %1$s\n</string>
    <string name="fragment_main_log_header_address">DeviceAddress: %1$s\n</string>
    <string name="fragment_main_log_header_time">LogTime: %1$s\n\n</string>

    <string name="fragment_main_menu_title">More</string>
    <string name="fragment_main_menu_settings">Settings</string>
    <string name="fragment_main_menu_device_list">Devices</string>
    <string name="fragment_main_menu_shortcut">Shortcut Mode</string>
    <string name="fragment_main_menu_input">Input Mode</string>
    <string name="fragment_main_menu_about">About</string>
    <string name="fragment_main_menu_disconnect">Disconnect</string>
    <string name="fragment_main_bluetooth_status_connecting">connecting</string>
    <string name="fragment_main_bluetooth_status_connected">connected</string>
    <string name="fragment_main_bluetooth_status_disconnect">disconnect</string>
    <string name="fragment_main_bluetooth_status_waiting">waiting</string>
    <string name="fragment_main_statistics_receive">RX %1$d</string>
    <string name="fragment_main_statistics_write">TX %1$d</string>
    <string name="fragment_main_snackbar_hex_convert_normal_fail">Parser Hex Fail</string>
    <string name="fragment_main_snackbar_save_log_success">Saved: %1$s</string>

    <string name="fragment_device_title">@string/fragment_main_menu_device_list</string>
    <string name="fragment_settings_title">@string/fragment_main_menu_settings</string>
    <string name="fragment_about_title">@string/fragment_main_menu_about</string>
    <string name="fragment_about_group_author_title">Author</string>
    <string name="fragment_about_group_version_title">Version</string>
    <string name="fragment_about_group_issue_title">Issue</string>
    <string name="fragment_about_group_issue_value">commit an issue</string>
    <string name="fragment_about_group_license_title">LICENSE</string>



</resources>