<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/qmui_config_color_background"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:id="@+id/qmuiConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="?attr/qmui_topbar_height"
        android:orientation="vertical"
        android:visibility="visible">

        <com.qmuiteam.qmui.layout.QMUILinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvStatus"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:gravity="center"
                android:text="@string/fragment_main_bluetooth_status_disconnect" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvReceiveCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/fragment_main_statistics_receive_default"
                android:gravity="center"
                android:text="@string/fragment_main_statistics_receive"
                android:textColor="@android:color/white" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvWriteCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:background="@color/fragment_main_statistics_write_default"
                android:gravity="center"
                android:text="@string/fragment_main_statistics_write"
                android:textColor="@android:color/white" />
        </com.qmuiteam.qmui.layout.QMUILinearLayout>

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:fillViewport="true">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvReceive"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fragment_main_ui_output_hint" />

        </ScrollView>

        <com.qmuiteam.qmui.layout.QMUILinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.qmuiteam.qmui.layout.QMUILinearLayout
                android:id="@+id/llSendLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/cbHex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/fragment_main_ui_check_hex" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/edtMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/fragment_main_ui_message_hit_ascii" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSend"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_main_ui_button_send" />

            </com.qmuiteam.qmui.layout.QMUILinearLayout>

            <HorizontalScrollView
                android:id="@+id/svShortcutLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <com.qmuiteam.qmui.layout.QMUILinearLayout
                    android:id="@+id/llShortcut"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                </com.qmuiteam.qmui.layout.QMUILinearLayout>
            </HorizontalScrollView>
        </com.qmuiteam.qmui.layout.QMUILinearLayout>
    </LinearLayout>

    <com.qmuiteam.qmui.widget.QMUITopBarLayout
        android:id="@+id/qmuiTopBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        tools:layout_height="?attr/qmui_topbar_height" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>